# discord-pomodoro-rs

./: Cargo.toml  Config.toml  Makefile  README.md
src/: main.rs
