[package]
name = "discord_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
serde = { version = "1.0.130", features = ["derive"]}
toml = "0.5"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
chrono = "0.4.19"
